refactor: changed colors of links

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
             <p class="box-text"> text stuff</p>
         </div>
         <div class="box categories">
-            <div class="category">
+            <div class="category politics ">
                 Politics
             </div>
-            <div class="category">
+            <div class="category technology">
                 Technology
             </div>
-            <div class="category">
+            <div class="category local">
                 Local
             </div>
-            <div class="category">
+            <div class="category opinion">
                 Opinion
             </div>
-            <div class="category">
+            <div class="category sports">
                 Sports
             </div>
         </div>
