refactor: added links and changed proportions of divs

--- a/index.html
+++ b/index.html
@@ -12,55 +12,52 @@
 <body>
     <h1 class="main-title">The New News </h1>
     <div class=boxes>
-        <div class="box">
+        <div class="edge-box">
             <h4 class="box-title">
                 Student Learns HTML
             </h4>
-            <p class="box-text"> hi</p>
+            <p class="box-text"> This is random text</p>
         </div>
-        <div class="box">
+        <div class="middle-box">
             <h4 class="box-title">
                 BREAKING: Puppies are Adorable
             </h4>
-            <img src="http://placecorgi.com/260/180" />
-            <p class="box-text"> spencer</p>
+            <img class="puppy" src="http://placecorgi.com/260/180" />
+            <p class="box-text"> This is also random text</p>
         </div>
-        <div class="box">
+        <div class="edge-box">
             <h4 class="box-title">
                 CSS Is Apparently A Thing
             </h4>
-            <p class="box-text"> miss ya</p>
+            <p class="box-text"> You guessed it, more random text</p>
         </div>
     </div>
 
     <div class: "boxes">
-        <div class="box">
+        <div class="bottom-box">
             <h4 class="box-title">
                 Boy Likes Turtles
             </h4>
-            <p class="box-text"> text stuff</p>
+            <p class="box-text"> Random text again!</p>
         </div>
-        <div class="box categories">
+        <div class="categories">
             <div class="category politics ">
-                Politics
+                <a href="#">Politics</a>
             </div>
             <div class="category technology">
-                Technology
+                <a href="#">Technology</a>
             </div>
             <div class="category local">
-                Local
+                <a href="#">Local</a>
             </div>
             <div class="category opinion">
-                Opinion
+                <a href="#">Opinion</a>
             </div>
             <div class="category sports">
-                Sports
+                <a href="#">Sports</a>
             </div>
         </div>
     </div>
-
-    <div> </div>
-    <div> </div>
 </body>
 
 </html>
